--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ volumes:
     driver: local
   kibanadata:
     driver: local
-  logstashdata01:
+  logstashdata:
     driver: local
 
 networks:
@@ -275,7 +275,7 @@ services:
     user: root
     volumes:
       - certs:/usr/share/logstash/certs
-      - logstashdata01:/usr/share/logstash/data
+      - logstashdata:/usr/share/logstash/data
       - "./logstash_ingest_data/:/usr/share/logstash/ingest_data/"
       - "./logstash.conf:/usr/share/logstash/pipeline/logstash.conf:ro"
     environment:
