--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
     driver: local
   kibanadata:
     driver: local
-  logstashdata01:
+  logstashdata:
     driver: local
 
 networks:
@@ -149,7 +149,7 @@ services:
       timeout: 10s
       retries: 120
 
-  logstash01:
+  logstash:
     container_name: logstash
     depends_on:
       es01:
@@ -162,7 +162,7 @@ services:
     user: root
     volumes:
       - certs:/usr/share/logstash/certs
-      - logstashdata01:/usr/share/logstash/data
+      - logstashdata:/usr/share/logstash/data
       - "./logstash_ingest_data/:/usr/share/logstash/ingest_data/"
       - "./logstash.conf:/usr/share/logstash/pipeline/logstash.conf:ro"
     environment:
