--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,7 +105,7 @@ services:
     environment:
       - node.name=es01
       - cluster.name=${CLUSTER_NAME}
-      - discovery.seed_hosts=es01,es02,es03
+      - discovery.seed_hosts=es02,es03
       - cluster.initial_master_nodes=es01,es02,es03
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - bootstrap.memory_lock=true
@@ -148,7 +148,7 @@ services:
     environment:
       - node.name=es02
       - cluster.name=${CLUSTER_NAME}
-      - discovery.seed_hosts=es01,es02,es03
+      - discovery.seed_hosts=es01,es03
       - cluster.initial_master_nodes=es01,es02,es03
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - bootstrap.memory_lock=true
@@ -191,7 +191,7 @@ services:
     environment:
       - node.name=es03
       - cluster.name=${CLUSTER_NAME}
-      - discovery.seed_hosts=es01,es02,es03
+      - discovery.seed_hosts=es01,es02
       - cluster.initial_master_nodes=es01,es02,es03
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - bootstrap.memory_lock=true
